# Low-Latency-CPP-Exercises

./: .gitignore  README.md  STUDY_PROGRESS.md
01-getting-started/: README.md  TODO.md
02-brief-introduction-to-cpp/: EXERCISES.md  NOTES.md  README.md  SELF_CHECK_ANSWERS.md  STRICT_INTERFACES_GUIDE.md  TODO.md
02-brief-introduction-to-cpp/code/: CMakeLists.txt  abstractions.cpp  const_correctness.cpp  copy_and_swap.cpp  heap_allocations.cpp  main.cpp  raii_lock_guard.cpp  references.cpp  strict_interfaces.cpp  strict_interfaces_by_value.cpp  strict_interfaces_unique.cpp  strict_interfaces_unique_ptr.cpp  value_semantics.cpp
03-essential-cpp-techniques/: NOTES.md  TODO.md
03-essential-cpp-techniques/code/: 01_auto_type_deduction.cpp  02_move_semantics.cpp  03_lambdas.cpp  04_error_handling.cpp  04_order_book_strong.cpp  05_propagate_const.cpp
04-analyzing-and-measuring-performance/: 04_analyzing_performance_deep_dive.md  NOTES.md  TODO.md
04-analyzing-and-measuring-performance/code/: 01_big_o.cpp  02_amortized.cpp  03_profiling.cpp  04_cache_effects.cpp
08-memory-management/: 08_memory_management_deep_dive.md  NOTES.md  TODO.md
08-memory-management/code/: 01  01_stack_vs_heap  01_stack_vs_heap.cpp  02  02_smart_pointers.cpp  03  03_custom_allocator.cpp  04  04_memory_alignment.cpp  05  05_placement_new.cpp  06  06_memory_pool_arena.cpp  07  07_small_buffer_optimization.cpp  08  08_cache_lines_false_sharing.cpp  09  09_preallocated_pool.cpp
